# Lem-in

./: .gitignore  CMakeLists.txt  Makefile  README.md  lem-in  parserToDo  test
ft_printf/: Makefile
ft_printf/includes/: libft.h
ft_printf/libft/: Makefile  new_table.c
ft_printf/libft/includes/: libft.h
includes/: lemin.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/ft/: ft_strstr.c
maps/: my_map  wrong
maps/bigsup/: map_15
maps/flow-ten/: map_20
srcs/: lemin.c
srcs/logic/: add_path.c  bfs.c  bfs_get_paths.c  dinic.c  find_flow.c  find_path.c  free_paths.c  full_dinic.c  new_path.c  path_to_network.c  recover_path.c  reverse_paths.c  set_path.c
srcs/output/: move_ants.c  send_aints.c  send_ants.c  set_ant.c  set_prior.c
srcs/parse/: all_free.c  ants.c  count_items.c  create.c  edges.c  edges2.c  init_lemin.c  parser.c  rooms.c  rooms2.c  utils.c
srcs/validate/: validate_file.c
srcs/visualizer/: read_graph.py  visualizer.py
