cmake_minimum_required(VERSION 3.15)
project(lemin)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
include_directories(ft_printf/includes)
include_directories(ft_printf/libft/includes)
include_directories(includes)

add_executable(lemin
        ft_printf/includes/colors.h
        ft_printf/includes/funfortypes.h
        ft_printf/includes/header_double.h
        ft_printf/includes/libft.h
        ft_printf/includes/libftprintf.h
        ft_printf/includes/unixtime.h
        ft_printf/libft/includes/libft.h
        ft_printf/libft/free_table.c
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_signed.c
        ft_printf/libft/ft_itoabase.c
        ft_printf/libft/ft_itoadouble.c
        ft_printf/libft/ft_itoahex.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstadd_back.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstfind.c
        ft_printf/libft/ft_lsti.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstlast.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstmerge.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_lstqsort.c
        ft_printf/libft/ft_lstremove_if.c
        ft_printf/libft/ft_lstreverse.c
        ft_printf/libft/ft_lstsize.c
        ft_printf/libft/ft_lstswap.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_qsort.c
        ft_printf/libft/ft_stradd_back.c
        ft_printf/libft/ft_stradd_front.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strcat_front.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strcut.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strreplace.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/get_next_line.c
        ft_printf/libft/new_table.c
        ft_printf/srcs/bonus_star.c
        ft_printf/srcs/flag_hash.c
        ft_printf/srcs/ft_double.c
        ft_printf/srcs/ft_kek.c
        ft_printf/srcs/ft_longarith.c
        ft_printf/srcs/fun_flags.c
        ft_printf/srcs/fun_length.c
        ft_printf/srcs/funtypes_cdx_upx_o.c
        ft_printf/srcs/funtypes_sf_percent.c
        ft_printf/srcs/funtypes_ubp.c
        ft_printf/srcs/get_flag_sign.c
        ft_printf/srcs/length_bonus.c
        ft_printf/srcs/parse.c
        ft_printf/srcs/placeholder.c
        ft_printf/srcs/precision.c
        ft_printf/srcs/printf.c
        ft_printf/srcs/set_precision_width.c
        ft_printf/srcs/type_color.c
        ft_printf/srcs/type_unixtime.c
        ft_printf/srcs/unixtime.c
        includes/lemin.h
        srcs/logic/bfs.c
        srcs/logic/dinic.c
        srcs/logic/add_path.c
        srcs/logic/free_paths.c
        srcs/logic/new_path.c
        srcs/logic/find_path.c
        srcs/logic/set_path.c
        srcs/logic/reverse_paths.c
        srcs/output/send_ants.c
        srcs/output/set_prior.c
        srcs/output/set_ant.c
        srcs/output/move_ants.c
        srcs/lemin.c
        Makefile)
